--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -52,12 +52,10 @@ $sky-blue: #38aef0;
         color: $white;
         font-size: 15px;
         margin-bottom: 5px;
-        line-height: 15px;
         text-decoration: none;
       }
       &__latest-message {
         font-size: 11px;
-        line-height: 11px;
       }
     }
   }
@@ -102,13 +100,12 @@ $sky-blue: #38aef0;
     .message {
       padding-bottom: 46px;
       &__top {
-        height: 16px;
         margin-bottom: 12px;
         display: flex;
         &__user-name {
           color: $black;
           font-size: 16px;
-          line-height: 16px;
+          font-weight: bold;
         }
         &__date {
           color: $gray;
@@ -117,8 +114,14 @@ $sky-blue: #38aef0;
         }
       }
       &__bottom {
-        color: #434A54;
-        font-size: 14px;
+        &__text {
+          color: #434A54;
+          font-size: 14px;
+          margin-bottom: 12px;
+        }
+        &__image {
+          
+        }
       }
     }
   }
@@ -127,6 +130,7 @@ $sky-blue: #38aef0;
     height: 90px;
     display: flex;
     align-items: center;
+    position: relative;
     .form-items {
       height: 50px;
       display: flex;
@@ -147,6 +151,7 @@ $sky-blue: #38aef0;
         }
         &__image {
           position: absolute;
+          top: 10px;
           right: 10px;
           font-size: 1.3rem;
           cursor: pointer;
@@ -164,6 +169,7 @@ $sky-blue: #38aef0;
         text-align: center;
         position: absolute;
         right: 40px;
+        bottom: 20px;
         cursor: pointer;
       }
     }
