--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -97,6 +97,7 @@ $sky-blue: #38aef0;
     background-color: #fafafa;
     height: calc(100vh - 190px);
     padding: 35px 0 0 40px;
+    overflow: scroll;
     .message {
       padding-bottom: 46px;
       &__top {
